# onlinebook

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
src/config/: settings.rs
src/email/: mod.rs  smpt.rs
src/email/templates/: welcome.html
