[package]
name = "OnlineBook"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.22"
dotenv = "0.15.0"
envy = "0.4.2"

serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
lettre = { version = "0.11.20", default-features = false, features = ["tokio1", "smtp-transport", "builder", "tokio1-rustls-tls"] }
axum = "0.8.8"
serde_json = "1.0.149"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros"] }
uuid = { version = "1.23.0", features = ["v4"] }
rand = "0.10.0"
argon2 = "0.5.3"
password-hash = "0.6.0"
chrono = "0.4.44"
jsonwebtoken = "10.3.0"
